--- a/lib/config
+++ b/lib/config
@@ -5,7 +5,6 @@ crosscompile="1"
 user=""
 passwd=""
 menuconfig="0"
-emmc="0"
 mainline="0"
 
 # open fd
@@ -16,14 +15,13 @@ VALUES=$(dialog --ok-label "Submit" \
 	  --backtitle "Debian Image Builder" \
 	  --title "Config Menu" \
 	  --form "Choose:" \
-15 35 7 \
+15 35 6 \
 	"Username:"	1 1	"$user" 		1 10 18 0 \
 	"Password:"	2 1	"$passwd"  		2 10 18 0 \
         "Branch:"   	3 1     "$VERSION"        	3 10 18 0 \
         "Mainline:"   	4 1     "$mainline"        	4 15 2 0 \
 	"Menuconfig:"	5 1	"$menuconfig"  		5 15 2 0 \
 	"Crosscompile:" 6 1	"$crosscompile" 	6 15 2 0 \
-	"eMMC:"		7 1	"$emmc"		 	7 15 2 0 \
 2>&1 1>&3)
 
 # close fd
@@ -37,7 +35,7 @@ echo VERSION='"' >> tmp0
 echo mainline= >> tmp0
 echo menuconfig= >> tmp0
 echo crosscompile= >> tmp0
-echo emmc= >> tmp0
+echo emmc=0 >> tmp0
 echo custom_defconfig=0 >> tmp0
 echo MYCONFIG='"'nameofyour_defconfig'"' >> tmp0
 echo '"' > tmp2
