--- a/defconfig/allwinner_defconfig
+++ b/defconfig/allwinner_defconfig
@@ -1,4 +1,3 @@
-# ALLWINNER DEFCONFIG
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
@@ -64,7 +63,6 @@ CONFIG_ARM_ALLWINNER_SUN50I_CPUFREQ_NVMEM=m
 CONFIG_ARM_SCPI_CPUFREQ=m
 CONFIG_ARM_SCMI_PROTOCOL=y
 CONFIG_ARM_SCPI_PROTOCOL=y
-CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA512_ARM64=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
@@ -190,7 +188,6 @@ CONFIG_NF_CT_NETLINK_TIMEOUT=m
 CONFIG_NF_CT_NETLINK_HELPER=m
 CONFIG_NETFILTER_NETLINK_GLUE_CT=y
 CONFIG_NF_TABLES=m
-CONFIG_NF_TABLES_SET=m
 CONFIG_NF_TABLES_INET=y
 CONFIG_NF_TABLES_NETDEV=y
 CONFIG_NFT_NUMGEN=m
@@ -618,7 +615,6 @@ CONFIG_ISCSI_TCP=m
 CONFIG_ISCSI_BOOT_SYSFS=m
 CONFIG_ATA=m
 # CONFIG_ATA_VERBOSE_ERROR is not set
-# CONFIG_SATA_PMP is not set
 # CONFIG_ATA_SFF is not set
 CONFIG_MD=y
 CONFIG_MD_LINEAR=m
@@ -656,6 +652,7 @@ CONFIG_ISCSI_TARGET=m
 CONFIG_NETDEVICES=y
 CONFIG_BONDING=m
 CONFIG_DUMMY=m
+CONFIG_WIREGUARD=m
 CONFIG_EQUALIZER=m
 CONFIG_IFB=m
 CONFIG_NET_TEAM=m
@@ -780,6 +777,7 @@ CONFIG_B43_SDIO=y
 CONFIG_B43LEGACY=m
 CONFIG_BRCMSMAC=m
 CONFIG_BRCMFMAC=m
+CONFIG_BRCMFMAC_USB=y
 CONFIG_LIBERTAS_THINFIRM=m
 CONFIG_LIBERTAS_THINFIRM_USB=m
 CONFIG_MT7601U=m
@@ -1169,7 +1167,6 @@ CONFIG_USB_S2255=m
 CONFIG_VIDEO_USBTV=m
 CONFIG_VIDEO_PVRUSB2=m
 CONFIG_VIDEO_HDPVR=m
-CONFIG_VIDEO_USBVISION=m
 CONFIG_VIDEO_STK1160_COMMON=m
 CONFIG_VIDEO_AU0828=m
 CONFIG_VIDEO_CX231XX=m
@@ -1296,6 +1293,7 @@ CONFIG_SND_SUN8I_CODEC_ANALOG=m
 CONFIG_SND_SUN50I_CODEC_ANALOG=m
 CONFIG_SND_SUN4I_I2S=m
 CONFIG_SND_SUN4I_SPDIF=m
+CONFIG_SND_SOC_AC97_CODEC=m
 CONFIG_SND_SOC_ADAU1701=m
 CONFIG_SND_SOC_ADAU1761_I2C=m
 CONFIG_SND_SOC_ADAU1761_SPI=m
@@ -1585,7 +1583,6 @@ CONFIG_TYPEC=m
 CONFIG_TYPEC_TPS6598X=m
 CONFIG_TYPEC_MUX_PI3USB30532=m
 CONFIG_TYPEC_DP_ALTMODE=m
-CONFIG_USB_ROLE_SWITCH=m
 CONFIG_MMC=y
 CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_ARMMMCI=y
@@ -1719,7 +1716,6 @@ CONFIG_FB_TFT_UC1611=m
 CONFIG_FB_TFT_UC1701=m
 CONFIG_FB_TFT_UPD161704=m
 CONFIG_FB_TFT_WATTEROTT=m
-CONFIG_MOST=m
 CONFIG_XIL_AXIS_FIFO=m
 CONFIG_COMMON_CLK_MAX9485=m
 CONFIG_COMMON_CLK_SCPI=y
@@ -1911,6 +1907,7 @@ CONFIG_DAX=m
 CONFIG_NVMEM_SUNXI_SID=y
 CONFIG_RAVE_SP_EEPROM=m
 CONFIG_MUX_ADGS1408=m
+CONFIG_MOST=m
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
