--- a/defconfig/amlogic_defconfig
+++ b/defconfig/amlogic_defconfig
@@ -1,4 +1,3 @@
-# AMLOGIC DEFCONFIG
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
@@ -8,8 +7,6 @@ CONFIG_HIGH_RES_TIMERS=y
 CONFIG_PREEMPT=y
 CONFIG_BSD_PROCESS_ACCT=y
 CONFIG_BSD_PROCESS_ACCT_V3=y
-CONFIG_TASKSTATS=y
-CONFIG_TASK_DELAY_ACCT=y
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
 CONFIG_IKCONFIG=y
@@ -36,7 +33,6 @@ CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_EXPERT=y
 CONFIG_SGETMASK_SYSCALL=y
-CONFIG_SYSCTL_SYSCALL=y
 CONFIG_KALLSYMS_ALL=y
 CONFIG_BPF_SYSCALL=y
 # CONFIG_COMPAT_BRK is not set
@@ -53,7 +49,6 @@ CONFIG_KEXEC=y
 CONFIG_CRASH_DUMP=y
 CONFIG_XEN=y
 CONFIG_COMPAT=y
-# CONFIG_ARM64_LSE_ATOMICS is not set
 # CONFIG_EFI is not set
 CONFIG_HIBERNATION=y
 CONFIG_CPU_IDLE=y
@@ -70,8 +65,6 @@ CONFIG_ARM_SCPI_CPUFREQ=y
 CONFIG_ARM_SCPI_PROTOCOL=y
 CONFIG_VIRTUALIZATION=y
 CONFIG_KVM=y
-CONFIG_VHOST_NET=m
-CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
 CONFIG_CRYPTO_GHASH_ARM64_CE=y
@@ -95,7 +88,6 @@ CONFIG_CLEANCACHE=y
 CONFIG_FRONTSWAP=y
 CONFIG_CMA=y
 CONFIG_ZSWAP=y
-CONFIG_ZBUD=y
 CONFIG_Z3FOLD=y
 CONFIG_ZSMALLOC=y
 CONFIG_NET=y
@@ -189,7 +181,6 @@ CONFIG_NF_CT_NETLINK_TIMEOUT=m
 CONFIG_NF_CT_NETLINK_HELPER=m
 CONFIG_NETFILTER_NETLINK_GLUE_CT=y
 CONFIG_NF_TABLES=m
-CONFIG_NF_TABLES_SET=m
 CONFIG_NF_TABLES_INET=y
 CONFIG_NF_TABLES_NETDEV=y
 CONFIG_NFT_NUMGEN=m
@@ -267,7 +258,6 @@ CONFIG_NETFILTER_XT_MATCH_NFACCT=m
 CONFIG_NETFILTER_XT_MATCH_OSF=m
 CONFIG_NETFILTER_XT_MATCH_OWNER=m
 CONFIG_NETFILTER_XT_MATCH_POLICY=m
-CONFIG_NETFILTER_XT_MATCH_PHYSDEV=m
 CONFIG_NETFILTER_XT_MATCH_PKTTYPE=m
 CONFIG_NETFILTER_XT_MATCH_QUOTA=m
 CONFIG_NETFILTER_XT_MATCH_RATEEST=m
@@ -652,6 +642,7 @@ CONFIG_DM_INTEGRITY=m
 CONFIG_NETDEVICES=y
 CONFIG_BONDING=m
 CONFIG_DUMMY=m
+CONFIG_WIREGUARD=m
 CONFIG_MACVLAN=m
 CONFIG_MACVTAP=m
 CONFIG_IPVLAN=m
@@ -978,7 +969,6 @@ CONFIG_THERMAL=y
 CONFIG_THERMAL_GOV_FAIR_SHARE=y
 CONFIG_THERMAL_GOV_BANG_BANG=y
 CONFIG_THERMAL_GOV_USER_SPACE=y
-CONFIG_THERMAL_GOV_POWER_ALLOCATOR=y
 CONFIG_CPU_THERMAL=y
 CONFIG_CLOCK_THERMAL=y
 CONFIG_THERMAL_EMULATION=y
@@ -1077,7 +1067,6 @@ CONFIG_USB_S2255=m
 CONFIG_VIDEO_USBTV=m
 CONFIG_VIDEO_PVRUSB2=m
 CONFIG_VIDEO_HDPVR=m
-CONFIG_VIDEO_USBVISION=m
 CONFIG_VIDEO_STK1160_COMMON=m
 CONFIG_VIDEO_AU0828=m
 CONFIG_VIDEO_CX231XX=m
@@ -1179,7 +1168,11 @@ CONFIG_SND_USB_TONEPORT=m
 CONFIG_SND_USB_VARIAX=m
 CONFIG_SND_SOC=m
 CONFIG_SND_DESIGNWARE_I2S=m
+# CONFIG_SND_MESON_AIU is not set
 CONFIG_SND_MESON_AXG_SOUND_CARD=m
+CONFIG_SND_MESON_GX_SOUND_CARD=m
+CONFIG_SND_MESON_G12A_TOACODEC=m
+CONFIG_SND_SOC_AC97_CODEC=m
 CONFIG_SND_SOC_ADAU1701=m
 CONFIG_SND_SOC_ADAU1761_I2C=m
 CONFIG_SND_SOC_ADAU1761_SPI=m
@@ -1494,6 +1487,7 @@ CONFIG_QCOM_HIDMA_MGMT=y
 CONFIG_QCOM_HIDMA=y
 CONFIG_VIRTIO_BALLOON=y
 CONFIG_VIRTIO_MMIO=y
+CONFIG_VHOST_NET=m
 # CONFIG_XEN_BALLOON is not set
 # CONFIG_XEN_DEV_EVTCHN is not set
 # CONFIG_XEN_BACKEND is not set
@@ -1750,13 +1744,13 @@ CONFIG_CRYPTO_DEV_CCREE=m
 CONFIG_PKCS7_TEST_KEY=m
 CONFIG_DMA_CMA=y
 CONFIG_PRINTK_TIME=y
-CONFIG_DEBUG_FS=y
 CONFIG_MAGIC_SYSRQ=y
+CONFIG_DEBUG_FS=y
 CONFIG_DEBUG_MEMORY_INIT=y
 CONFIG_DETECT_HUNG_TASK=y
 # CONFIG_SCHED_DEBUG is not set
 # CONFIG_DEBUG_PREEMPT is not set
 # CONFIG_FTRACE is not set
+# CONFIG_STRICT_DEVMEM is not set
 CONFIG_ASYNC_RAID6_TEST=m
 CONFIG_MEMTEST=y
-# CONFIG_STRICT_DEVMEM is not set
