--- a/lib/config
+++ b/lib/config
@@ -17,7 +17,7 @@ VALUES=$(dialog --ok-label "Submit" \
 	  --backtitle "Debian Image Builder" \
 	  --title "Config Menu" \
 	  --form "Choose:" \
-17 31 10 \
+14 31 7 \
 	"Username:"	1 1	"$user" 		1 10 18 0 \
 	"Password:"	2 1	"$passwd"  		2 10 18 0 \
 	"Debian:"	3 1	"$DEBIAN_VERSION"  	3 10 18 0 \
@@ -26,8 +26,6 @@ VALUES=$(dialog --ok-label "Submit" \
 	"Menuconfig:"	6 1	"$menuconfig"  		6 15 2 0 \
 	"Crosscompile:" 7 1	"$crosscompile" 	7 15 2 0 \
 	""		8 1	""			8 15 0 0 \
-	"GNU Compiler Collection" 9 1 ""		9 15 0 0 \
-	"GCC:"		10 1	"$gcc"		 	10 15 4 0 \
 2>&1 1>&3)
 
 # close fd
@@ -52,6 +50,9 @@ echo '"' >> tmp2
 echo '"' >> tmp2
 paste -d '\0' tmp0 tmp1 tmp2  > userdata.txt
 rm -f tmp0 tmp1 tmp2
+
+# gcc version
+echo GCC='"'$(gcc --version | grep 8.3.0 | awk '{print $4}')'"' >> userdata.txt
 
 # clear screen
 clear
