corrected gcc extraction

--- a/lib/config
+++ b/lib/config
@@ -52,7 +52,7 @@ paste -d '\0' tmp0 tmp1 tmp2  > userdata.txt
 rm -f tmp0 tmp1 tmp2
 
 # gcc version
-echo GCC='"'$(gcc --version | grep 8.3.0 | awk '{print $4}')'"' >> userdata.txt
+echo GCC='"'$(gcc --version | grep gcc | awk '{print $4}')'"' >> userdata.txt
 
 # clear screen
 clear
