--- a/lib/config
+++ b/lib/config
@@ -7,7 +7,8 @@ passwd=""
 MOTD="Debian"
 HOSTNAME="computer"
 DEBIAN_VERSION="buster"
-VERSION="5.8.12"
+VERSION="5.8.14"
+UBOOT_VERSION="v2020.10"
 menuconfig="0"
 mainline="0"
 crosscompile="1"
@@ -20,17 +21,18 @@ VALUES=$(dialog --ok-label "Submit" \
 	  --backtitle "Debian Image Builder" \
 	  --title "Config Menu" \
 	  --form "Choose:" \
-16 31 9 \
+17 31 10 \
 	"Username:"	1 1	"$user" 		1 10 18 0 \
 	"Password:"	2 1	"$passwd"  		2 10 18 0 \
 	"Branding:"	3 1	"$MOTD"			3 10 18 0 \
 	"Hostname:"	4 1	"$HOSTNAME"		4 10 18 0 \
 	"Debian:"	5 1	"$DEBIAN_VERSION"  	5 10 18 0 \
-        "Branch:"   	6 1     "$VERSION"        	6 10 18 0 \
-        "Mainline:"   	7 1     "$mainline"        	7 15 2 0 \
-	"Menuconfig:"	8 1	"$menuconfig"  		8 15 2 0 \
-	"Crosscompile:" 9 1	"$crosscompile" 	9 15 2 0 \
-	""		10 1	""			10 15 0 0 \
+        "U-Boot:"   	6 1     "$UBOOT_VERSION"       	6 10 18 0 \
+        "Branch:"   	7 1     "$VERSION"        	7 10 18 0 \
+        "Mainline:"   	8 1     "$mainline"        	8 15 2 0 \
+	"Menuconfig:"	9 1	"$menuconfig"  		9 15 2 0 \
+	"Crosscompile:" 10 1	"$crosscompile" 	10 15 2 0 \
+	""		11 1	""			11 15 0 0 \
 2>&1 1>&3)
 
 # close fd
@@ -43,6 +45,7 @@ echo passwd='"' >> tmp0
 echo MOTD='"' >> tmp0
 echo HOSTNAME='"' >> tmp0
 echo DEBIAN_VERSION='"' >> tmp0
+echo UBOOT_VERSION='"' >> tmp0
 echo VERSION='"' >> tmp0
 echo mainline= >> tmp0
 echo menuconfig= >> tmp0
@@ -52,6 +55,7 @@ echo custom_defconfig=0 >> tmp0
 echo MYCONFIG='"'nameofyour_defconfig'"' >> tmp0
 echo verbose=0 >> tmp0
 echo '"' > tmp2
+echo '"' >> tmp2
 echo '"' >> tmp2
 echo '"' >> tmp2
 echo '"' >> tmp2
