--- a/lib/config
+++ b/lib/config
@@ -12,6 +12,7 @@ UBOOT_VERSION="v2020.10"
 menuconfig="0"
 mainline="0"
 crosscompile="1"
+rtl8812au="0"
 
 # open fd
 exec 3>&1
@@ -21,7 +22,7 @@ VALUES=$(dialog --ok-label "Submit" \
 	  --backtitle "Debian Image Builder" \
 	  --title "Config Menu" \
 	  --form "Choose:" \
-17 31 10 \
+18 31 11 \
 	"Username:"	1 1	"$user" 		1 10 18 0 \
 	"Password:"	2 1	"$passwd"  		2 10 18 0 \
 	"Branding:"	3 1	"$MOTD"			3 10 18 0 \
@@ -32,7 +33,7 @@ VALUES=$(dialog --ok-label "Submit" \
         "Mainline:"   	8 1     "$mainline"        	8 15 2 0 \
 	"Menuconfig:"	9 1	"$menuconfig"  		9 15 2 0 \
 	"Crosscompile:" 10 1	"$crosscompile" 	10 15 2 0 \
-	""		11 1	""			11 15 0 0 \
+	"rtl8812au:"	11 1	"$rtl8812au"	 	11 15 2 0 \
 2>&1 1>&3)
 
 # close fd
@@ -50,6 +51,7 @@ echo VERSION='"' >> tmp0
 echo mainline= >> tmp0
 echo menuconfig= >> tmp0
 echo crosscompile= >> tmp0
+echo rtl8812au= >> tmp0
 echo emmc=0 >> tmp0
 echo custom_defconfig=0 >> tmp0
 echo MYCONFIG='"'nameofyour_defconfig'"' >> tmp0
