Realtek 8811CU/21CU wireless support

--- a/lib/config
+++ b/lib/config
@@ -12,7 +12,8 @@ UBOOT_VERSION="v2020.10"
 menuconfig="0"
 mainline="0"
 crosscompile="1"
-rtl8812au="0"
+rtl88XXau="0"
+rtl88XXcu="0"
 
 # open fd
 exec 3>&1
@@ -22,7 +23,7 @@ VALUES=$(dialog --ok-label "Submit" \
 	  --backtitle "Debian Image Builder" \
 	  --title "Config Menu" \
 	  --form "Choose:" \
-18 31 11 \
+19 31 12 \
 	"Username:"	1 1	"$user" 		1 10 18 0 \
 	"Password:"	2 1	"$passwd"  		2 10 18 0 \
 	"Branding:"	3 1	"$MOTD"			3 10 18 0 \
@@ -33,7 +34,8 @@ VALUES=$(dialog --ok-label "Submit" \
         "Mainline:"   	8 1     "$mainline"        	8 15 2 0 \
 	"Menuconfig:"	9 1	"$menuconfig"  		9 15 2 0 \
 	"Crosscompile:" 10 1	"$crosscompile" 	10 15 2 0 \
-	"rtl8812au:"	11 1	"$rtl8812au"	 	11 15 2 0 \
+	"rtl88XXau:"	11 1	"$rtl88XXau"	 	11 15 2 0 \
+	"rtl88XXcu:"	12 1	"$rtl88XXcu"	 	12 15 2 0 \
 2>&1 1>&3)
 
 # close fd
@@ -52,6 +54,7 @@ echo mainline= >> tmp0
 echo menuconfig= >> tmp0
 echo crosscompile= >> tmp0
 echo rtl8812au= >> tmp0
+echo rtl8811cu= >> tmp0
 echo emmc=0 >> tmp0
 echo custom_defconfig=0 >> tmp0
 echo MYCONFIG='"'nameofyour_defconfig'"' >> tmp0
