--- a/lib/config
+++ b/lib/config
@@ -19,23 +19,26 @@ rtl88XXcu="0"
 exec 3>&1
 
 # Store data to $VALUES variable
-VALUES=$(dialog --ok-label "Submit" \
+VALUES=$(dialog --ok-label "Submit" --no-cancel \
 	  --backtitle "Debian Image Builder" \
 	  --title "Config Menu" \
 	  --form "Choose:" \
-19 31 12 \
-	"Username:"	1 1	"$user" 		1 10 18 0 \
-	"Password:"	2 1	"$passwd"  		2 10 18 0 \
-	"Branding:"	3 1	"$MOTD"			3 10 18 0 \
-	"Hostname:"	4 1	"$HOSTNAME"		4 10 18 0 \
-	"Debian:"	5 1	"$DEBIAN_VERSION"  	5 10 18 0 \
-        "U-Boot:"   	6 1     "$UBOOT_VERSION"       	6 10 18 0 \
-        "Branch:"   	7 1     "$VERSION"        	7 10 18 0 \
-        "Mainline:"   	8 1     "$mainline"        	8 15 2 0 \
-	"Menuconfig:"	9 1	"$menuconfig"  		9 15 2 0 \
-	"Crosscompile:" 10 1	"$crosscompile" 	10 15 2 0 \
-	"rtl88XXau:"	11 1	"$rtl88XXau"	 	11 15 2 0 \
-	"rtl88XXcu:"	12 1	"$rtl88XXcu"	 	12 15 2 0 \
+23 40 15 \
+	"Username:"	1 1	"$user" 		1 11 22 0 \
+	"Password:"	2 1	"$passwd"  		2 11 22 0 \
+	"Branding:"	3 1	"$MOTD"			3 11 22 0 \
+	"Hostname:"	4 1	"$HOSTNAME"		4 11 22 0 \
+	"Debian:"	5 1	"$DEBIAN_VERSION"  	5 9 22 0 \
+	""		6 1	""	 		6 14 0 0 \
+        "U-Boot:"   	7 1     "$UBOOT_VERSION"       	7 9 10 0 \
+        "Branch:"   	8 1     "$VERSION"        	8 9 10 0 \
+        "Mainline:"   	9 1     "$mainline"        	9 11 2 0 \
+	"Menuconfig:"	10 1	"$menuconfig"  		10 13 2 0 \
+	"Crosscompile:" 11 1	"$crosscompile" 	11 15 2 0 \
+	""		12 1	""	 		12 14 0 0 \
+	"Wireless"	13 1	""	 		13 14 0 0 \
+	"rtl88XXau:"	14 1	"$rtl88XXau"	 	14 12 2 0 \
+	"rtl88XXcu:"	15 1	"$rtl88XXcu"	 	15 12 2 0 \
 2>&1 1>&3)
 
 # close fd
