--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -14,6 +14,7 @@ mainline="0"
 crosscompile="1"
 rtl88XXau="0"
 rtl88XXcu="0"
+rtl88X2bu="0"
 
 # open fd
 exec 3>&1
@@ -23,7 +24,7 @@ VALUES=$(dialog --ok-label "Submit" --no-cancel \
 	  --backtitle "Debian Image Builder" \
 	  --title "Config Menu" \
 	  --form "Choose:" \
-23 40 15 \
+23 40 16 \
 	"Username:"	1 1	"$user" 		1 11 22 0 \
 	"Password:"	2 1	"$passwd"  		2 11 22 0 \
 	"Branding:"	3 1	"$MOTD"			3 11 22 0 \
@@ -39,6 +40,7 @@ VALUES=$(dialog --ok-label "Submit" --no-cancel \
 	"Wireless"	13 1	""	 		13 14 0 0 \
 	"rtl88XXau:"	14 1	"$rtl88XXau"	 	14 12 2 0 \
 	"rtl88XXcu:"	15 1	"$rtl88XXcu"	 	15 12 2 0 \
+	"rtl88X2bu:"	16 1	"$rtl88X2bu"	 	16 12 2 0 \
 2>&1 1>&3)
 
 # close fd
@@ -58,6 +60,7 @@ echo menuconfig= >> tmp0
 echo crosscompile= >> tmp0
 echo rtl8812au= >> tmp0
 echo rtl8811cu= >> tmp0
+echo rtl88x2bu= >> tmp0
 echo emmc=0 >> tmp0
 echo custom_defconfig=0 >> tmp0
 echo MYCONFIG='"'nameofyour_defconfig'"' >> tmp0
