Linux: Kernel module signing
CONFIG_MODULE_SIG=y
CONFIG_MODULE_SIG_KEY="certs/signing_key.pem"

--- a/defconfig/allwinner_defconfig
+++ b/defconfig/allwinner_defconfig
@@ -2079,3 +2079,5 @@ CONFIG_CONSOLE_LOGLEVEL_DEFAULT=1
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_DEBUG_FS=y
 # CONFIG_STRICT_DEVMEM is not set
+CONFIG_MODULE_SIG=y
+CONFIG_MODULE_SIG_KEY="certs/signing_key.pem"
