--- a/defconfig/amlogic_defconfig
+++ b/defconfig/amlogic_defconfig
@@ -1724,6 +1724,7 @@ CONFIG_CRYPTO_USER_API_SKCIPHER=m
 CONFIG_CRYPTO_USER_API_RNG=m
 CONFIG_CRYPTO_USER_API_AEAD=m
 CONFIG_CRYPTO_DEV_CCREE=m
+CONFIG_CRYPTO_DEV_AMLOGIC_GXL=m
 CONFIG_PKCS7_TEST_KEY=m
 CONFIG_DMA_CMA=y
 CONFIG_PRINTK_TIME=y
@@ -1737,3 +1738,5 @@ CONFIG_DETECT_HUNG_TASK=y
 # CONFIG_STRICT_DEVMEM is not set
 CONFIG_ASYNC_RAID6_TEST=m
 CONFIG_MEMTEST=y
+CONFIG_MODULE_SIG=y
+CONFIG_MODULE_SIG_KEY="certs/signing_key.pem"
