--- a/defconfig/bcm2711_defconfig
+++ b/defconfig/bcm2711_defconfig
@@ -1415,3 +1415,5 @@ CONFIG_IRQSOFF_TRACER=y
 CONFIG_SCHED_TRACER=y
 CONFIG_BLK_DEV_IO_TRACE=y
 # CONFIG_UPROBE_EVENTS is not set
+CONFIG_MODULE_SIG=y
+CONFIG_MODULE_SIG_KEY="certs/signing_key.pem"
