Debian Image Builder
userdata.txt files is now split into categories

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -79,6 +79,14 @@ rm -f tmp0 tmp1 tmp2
 # gcc version
 echo GCC='"'$(gcc --version | grep gcc | awk '{print $4}')'"' >> userdata.txt
 
+# categories
+sed -i '1i### USER INFORMATION' userdata.txt
+sed -i '6i### DISTRIBUTION RELEASE' userdata.txt
+sed -i '8i### UBOOT AND LINUX KERNEL' userdata.txt
+sed -i '14i### WIRELESS' userdata.txt
+sed -i '18i### CUSTOM' userdata.txt
+sed -i '24i### DO NOT EDIT BELOW THIS LINE' userdata.txt
+
 # clear screen
 clear
 
