--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -2,6 +2,7 @@
 RED="\e[0;31m"
 FIN="\e[0m"
 
+NAME=""
 user=""
 passwd=""
 MOTD="Debian"
@@ -24,23 +25,24 @@ VALUES=$(dialog --ok-label "Submit" --no-cancel \
 	  --backtitle "Debian Image Builder" \
 	  --title "Config Menu" \
 	  --form "Choose:" \
-23 40 16 \
-	"Username:"	1 1	"$user" 		1 11 22 0 \
-	"Password:"	2 1	"$passwd"  		2 11 22 0 \
-	"Branding:"	3 1	"$MOTD"			3 11 22 0 \
-	"Hostname:"	4 1	"$HOSTNAME"		4 11 22 0 \
-	"Debian:"	5 1	"$DEBIAN_VERSION"  	5 9 22 0 \
-	""		6 1	""	 		6 14 0 0 \
-        "U-Boot:"   	7 1     "$UBOOT_VERSION"       	7 9 10 0 \
-        "Branch:"   	8 1     "$VERSION"        	8 9 10 0 \
-        "Mainline:"   	9 1     "$mainline"        	9 11 2 0 \
-	"Menuconfig:"	10 1	"$menuconfig"  		10 13 2 0 \
-	"Crosscompile:" 11 1	"$crosscompile" 	11 15 2 0 \
-	""		12 1	""	 		12 14 0 0 \
-	"Wireless"	13 1	""	 		13 14 0 0 \
-	"rtl88XXau:"	14 1	"$rtl88XXau"	 	14 12 2 0 \
-	"rtl88X2bu:"	15 1	"$rtl88X2bu"	 	15 12 2 0 \
-	"rtl88XXcu:"	16 1	"$rtl88XXcu"	 	16 12 2 0 \
+24 40 17 \
+	"Name:"		1 1	"$NAME" 		1 11 22 0 \
+	"Username:"	2 1	"$user" 		2 11 22 0 \
+	"Password:"	3 1	"$passwd"  		3 11 22 0 \
+	"Branding:"	4 1	"$MOTD"			4 11 22 0 \
+	"Hostname:"	5 1	"$HOSTNAME"		5 11 22 0 \
+	"Debian:"	6 1	"$DEBIAN_VERSION"  	6 9 22 0 \
+	""		7 1	""	 		7 14 0 0 \
+        "U-Boot:"   	8 1     "$UBOOT_VERSION"       	8 9 10 0 \
+        "Branch:"   	9 1     "$VERSION"        	9 9 10 0 \
+        "Mainline:"   	10 1     "$mainline"        	10 11 2 0 \
+	"Menuconfig:"	11 1	"$menuconfig"  		11 13 2 0 \
+	"Crosscompile:" 12 1	"$crosscompile" 	12 15 2 0 \
+	""		13 1	""	 		13 14 0 0 \
+	"Wireless"	14 1	""	 		14 14 0 0 \
+	"rtl88XXau:"	15 1	"$rtl88XXau"	 	15 12 2 0 \
+	"rtl88X2bu:"	16 1	"$rtl88X2bu"	 	16 12 2 0 \
+	"rtl88XXcu:"	17 1	"$rtl88XXcu"	 	17 12 2 0 \
 2>&1 1>&3)
 
 # close fd
@@ -48,7 +50,8 @@ exec 3>&-
 
 # convert into vars
 echo "$VALUES" > tmp1
-echo user='"' > tmp0
+echo NAME='"' > tmp0
+echo user='"' >> tmp0
 echo passwd='"' >> tmp0
 echo MOTD='"' >> tmp0
 echo HOSTNAME='"' >> tmp0
@@ -73,6 +76,7 @@ echo '"' >> tmp2
 echo '"' >> tmp2
 echo '"' >> tmp2
 echo '"' >> tmp2
+echo '"' >> tmp2
 paste -d '\0' tmp0 tmp1 tmp2  > userdata.txt
 rm -f tmp0 tmp1 tmp2
 
@@ -81,11 +85,11 @@ echo GCC='"'$(gcc --version | grep gcc | awk '{print $4}')'"' >> userdata.txt
 
 # categories
 sed -i '1i### USER INFORMATION' userdata.txt
-sed -i '6i### DISTRIBUTION RELEASE' userdata.txt
-sed -i '8i### UBOOT AND LINUX KERNEL' userdata.txt
-sed -i '14i### WIRELESS' userdata.txt
-sed -i '18i### CUSTOM' userdata.txt
-sed -i '24i### DO NOT EDIT BELOW THIS LINE' userdata.txt
+sed -i '7i### DISTRIBUTION RELEASE' userdata.txt
+sed -i '9i### UBOOT AND LINUX KERNEL' userdata.txt
+sed -i '15i### WIRELESS' userdata.txt
+sed -i '19i### CUSTOM' userdata.txt
+sed -i '25i### DO NOT EDIT BELOW THIS LINE' userdata.txt
 
 # clear screen
 clear
