--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -16,6 +16,8 @@ crosscompile="1"
 rtl88XXau="0"
 rtl88X2bu="0"
 rtl88XXcu="0"
+custom_defconfig="0"
+MYCONFIG=""
 
 # open fd
 exec 3>&1
@@ -25,7 +27,7 @@ VALUES=$(dialog --ok-label "Submit" --no-cancel \
 	  --backtitle "Debian Image Builder" \
 	  --title "Config Menu" \
 	  --form "Choose:" \
-24 40 17 \
+0 40 0 \
 	"Name:"		1 1	"$NAME" 		1 7 27 0 \
 	"Username:"	2 1	"$user" 		2 11 22 0 \
 	"Password:"	3 1	"$passwd"  		3 11 22 0 \
@@ -43,6 +45,10 @@ VALUES=$(dialog --ok-label "Submit" --no-cancel \
 	"rtl88XXau:"	15 1	"$rtl88XXau"	 	15 12 2 0 \
 	"rtl88X2bu:"	16 1	"$rtl88X2bu"	 	16 12 2 0 \
 	"rtl88XXcu:"	17 1	"$rtl88XXcu"	 	17 12 2 0 \
+	""		18 1	""	 		18 14 0 0 \
+	"Customize"	19 1	""	 		19 14 0 0 \
+	"Defconfig:"	20 1	"$custom_defconfig" 	20 12 2 0 \
+	"Name:"		21 1	"$MYCONFIG"	  	21 7 27 0 \
 2>&1 1>&3)
 
 # close fd
@@ -64,9 +70,9 @@ echo crosscompile= >> tmp0
 echo rtl8812au= >> tmp0
 echo rtl88x2bu= >> tmp0
 echo rtl8811cu= >> tmp0
+echo custom_defconfig= >> tmp0
+echo MYCONFIG='"' >> tmp0
 echo emmc=0 >> tmp0
-echo custom_defconfig=0 >> tmp0
-echo MYCONFIG='"'nameofyour_defconfig'"' >> tmp0
 echo verbose=0 >> tmp0
 echo auto=1 >> tmp0
 echo '"' > tmp2
@@ -77,6 +83,14 @@ echo '"' >> tmp2
 echo '"' >> tmp2
 echo '"' >> tmp2
 echo '"' >> tmp2
+echo >> tmp2
+echo >> tmp2
+echo >> tmp2
+echo >> tmp2
+echo >> tmp2
+echo >> tmp2
+echo >> tmp2
+echo _defconfig'"' >> tmp2
 paste -d '\0' tmp0 tmp1 tmp2  > userdata.txt
 rm -f tmp0 tmp1 tmp2
 
