Linux and U-Boot
Defaults: 5.10.37 & v2021.04
Config: Mainline changed to RC
Linux script corrected
Extra wireless now gets checked against git repo

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -9,10 +9,10 @@ MOTD="Debian"
 HOSTNAME="computer"
 DISTRO="debian"
 DISTRO_VERSION="buster"
-VERSION="5.10.33"
-UBOOT_VERSION="v2021.01"
+VERSION="5.10.37"
+UBOOT_VERSION="v2021.04"
 menuconfig="0"
-mainline="0"
+rc="0"
 crosscompile="1"
 rtl88XXau="0"
 rtl88X2bu="0"
@@ -41,7 +41,7 @@ VALUES=$(dialog --ok-label "Submit" --no-cancel \
 	""		10 1	""	 		10 14 0 0 \
         "U-Boot:"   	11 1     "$UBOOT_VERSION"       11 9 10 0 \
         "Branch:"   	12 1     "$VERSION"        	12 9 10 0 \
-        "Mainline:"   	13 1     "$mainline"        	13 11 2 0 \
+        "RC:"   	13 1     "$rc"	        	13 5 2 0 \
 	"Menuconfig:"	14 1	"$menuconfig"  		14 13 2 0 \
 	"Crosscompile:" 15 1	"$crosscompile" 	15 15 2 0 \
 	""		16 1	""	 		16 14 0 0 \
@@ -69,7 +69,7 @@ echo DISTRO='"' >> tmp0
 echo DISTRO_VERSION='"' >> tmp0
 echo UBOOT_VERSION='"' >> tmp0
 echo VERSION='"' >> tmp0
-echo mainline= >> tmp0
+echo rc= >> tmp0
 echo menuconfig= >> tmp0
 echo crosscompile= >> tmp0
 echo rtl8812au= >> tmp0
