Builder now checks the userdata file for correct builder version and if not found forces user to create a new userdata file.

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -80,6 +80,7 @@ echo MYCONFIG='"' >> tmp0
 echo emmc=0 >> tmp0
 echo verbose=0 >> tmp0
 echo auto=1 >> tmp0
+echo builder=2.1 >> tmp0
 echo '"' > tmp2
 echo '"' >> tmp2
 echo '"' >> tmp2
