Debian Image Builder
Defconfigs: CONFIG_ARCH_SUPPORTS_NUMA_BALANCING=y
Amlogic: Added more Meson64 patches.
U-Boot: Disabled Odroid N2+ patch

--- a/defconfig/allwinner_defconfig
+++ b/defconfig/allwinner_defconfig
@@ -45,6 +45,7 @@ CONFIG_ARM64_VA_BITS_48=y
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=8
 CONFIG_NUMA=y
+CONFIG_ARCH_SUPPORTS_NUMA_BALANCING=y
 CONFIG_SECCOMP=y
 CONFIG_PARAVIRT=y
 CONFIG_COMPAT=y
