Wireless: RTL88XXAU
https://github.com/aircrack-ng/rtl8812au

nano userdata.txt
aircrack=1    # 1 to enable

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -83,7 +83,8 @@ echo MYCONFIG='"' >> tmp0
 echo emmc=0 >> tmp0
 echo verbose=0 >> tmp0
 echo auto=1 >> tmp0
-echo builder=2.2 >> tmp0
+echo aircrack=0 >> tmp0
+echo builder=2.3 >> tmp0
 echo '"' > tmp2
 echo '"' >> tmp2
 echo '"' >> tmp2
@@ -114,7 +115,7 @@ sed -i '7i### DISTRIBUTION AND RELEASE' userdata.txt
 sed -i '10i### UBOOT AND LINUX KERNEL' userdata.txt
 sed -i '17i### WIRELESS' userdata.txt
 sed -i '21i### CUSTOM' userdata.txt
-sed -i '27i### DO NOT EDIT BELOW THIS LINE' userdata.txt
+sed -i '28i### DO NOT EDIT BELOW THIS LINE' userdata.txt
 
 # clear screen
 clear
