--- a/defconfig/amlogic_defconfig
+++ b/defconfig/amlogic_defconfig
@@ -3448,6 +3448,7 @@ CONFIG_PWM=y
 CONFIG_PWM_IQS620A=m
 CONFIG_PWM_LP3943=m
 CONFIG_PWM_MESON=y
+CONFIG_PWM_GPIO=m
 CONFIG_PWM_TWL=m
 CONFIG_PWM_TWL_LED=m
 CONFIG_PHY_XGENE=y
