--- a/defconfig/odroidn2_defconfig
+++ b/defconfig/odroidn2_defconfig
@@ -86,6 +86,7 @@ CONFIG_JUMP_LABEL=y
 # CONFIG_STACKPROTECTOR is not set
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
+CONFIG_MODULE_SIG=y
 CONFIG_BLK_DEV_ZONED=y
 CONFIG_BLK_DEV_THROTTLING=y
 CONFIG_BLK_CMDLINE_PARSER=y
