--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -10,7 +10,7 @@ HOSTNAME="computer"
 DISTRO="debian"
 DISTRO_VERSION="buster"
 UBOOT_VERSION="v2021.07"
-VERSION="5.10.56"
+VERSION="5.10.58"
 BUILD_VERSION="1"
 menuconfig="0"
 rc="0"
@@ -87,7 +87,8 @@ echo emmc=0 >> tmp0
 echo verbose=0 >> tmp0
 echo auto=1 >> tmp0
 echo aircrack=0 >> tmp0
-echo builder=2.5 >> tmp0
+echo CFLAGS='"''"' >> tmp0
+echo builder=2.6 >> tmp0
 echo '"' > tmp2
 echo '"' >> tmp2
 echo '"' >> tmp2
@@ -119,7 +120,8 @@ sed -i '7i### DISTRIBUTION AND RELEASE' userdata.txt
 sed -i '10i### UBOOT AND LINUX KERNEL' userdata.txt
 sed -i '18i### WIRELESS' userdata.txt
 sed -i '22i### CUSTOM' userdata.txt
-sed -i '29i### DO NOT EDIT BELOW THIS LINE' userdata.txt
+sed -i '29i### COMPILER TUNING' userdata.txt
+sed -i '31i### DO NOT EDIT BELOW THIS LINE' userdata.txt
 
 # clear screen
 clear
