--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -8,7 +8,7 @@ passwd=""
 MOTD="Debian"
 HOSTNAME="computer"
 DISTRO="debian"
-DISTRO_VERSION="buster"
+DISTRO_VERSION="bullseye"
 UBOOT_VERSION="v2021.07"
 VERSION="5.10.58"
 BUILD_VERSION="1"
